--- a/wp-content/themes/I9ME/_src/scss/core/_variaveis.scss
+++ b/wp-content/themes/I9ME/_src/scss/core/_variaveis.scss
@@ -46,8 +46,14 @@ $font-header        : 'Rajdhani' !default;
 $white		: #ffffff;
 $black		: #000;
 $blue1		: #0b244a;
-$blue2		: #00349a;
+$blue2		: #005193;
 $blue3		: #4267b2;
+$blue4		: #173e77;
+$blue5		: #00375d;
+$blue6		: #0b293f;
+$blue7		: #0087EA;
+$blue8		: #00a5dc;
+$blue9		: #0072b8;
 
 
 //ALERTS
