--- a/wp-content/themes/I9ME/_src/scss/sections/_video.scss
+++ b/wp-content/themes/I9ME/_src/scss/sections/_video.scss
@@ -46,7 +46,7 @@
 
 		@include e('demo'){
 			@include span(1);
-		    	background-color: rgba(0,13,51, 0.90);
+		    	background-color: rgba(0, 24, 77, 0.75);
 		    	height: 100%;
 		    	left: 0px;
 				position: absolute;
