--- a/wp-content/themes/I9ME/_src/scss/sections/_footer.scss
+++ b/wp-content/themes/I9ME/_src/scss/sections/_footer.scss
@@ -4,7 +4,7 @@
 
 
     @include e('layertop'){
-        background-color: #003793;
+        background-color: $blue5;
         padding: 0;
 
         @include respond-to(sm){
@@ -14,18 +14,29 @@
 
     }
     @include e('title'){
-        border-bottom: 1px solid #000;
-        color: #fff;
-        display: block;
-        padding-bottom: 15px;
+        @include fonts(700,18);
+            border-bottom: 1px solid $blue6;
+            color: $white;
+            display: block;
+            padding-bottom: 25px;
 
     }
     @include e('bloco'){
         @include span(1);
+        li{
+            padding-bottom: 10px;
 
-        a{
-            color: #0087EA;
+            a{
+                @include fonts(500,14);
+                color: $blue8;
+                
+                &:hover{
+                    color: $blue7;
+                    text-decoration: underline;
+                }
+            }
         }
+       
 
         @include respond-to(sm){
             @include span(.20);
@@ -33,6 +44,45 @@
         }
     }
 
+    @include e('fones'){
+
+        a{  
+             color: $blue8;
+                
+                &:hover{
+                    color: $blue7;
+                    text-decoration: underline;
+                }
+                @include respond-to(md){
+                    display: none;
+                }
+        }
+        
+            @include m('d'){
+                display: none;
+                a{
+                     color: $blue8;
+                
+                    &:hover{
+                        color: $blue7;
+                        text-decoration: underline;
+                    }
+                }
+            }
+            @include respond-to(md){
+                @include m('d'){
+                    display: block;
+                div{
+                     color: $blue8;
+                
+                    &:hover{
+                        color: $blue7;
+                        text-decoration: underline;
+                    }
+                }
+                }
+            }
+    }
 
     @include e('iframe'){
         @include span(1);
@@ -61,6 +111,7 @@
         }
 
         span{
+            letter-spacing: 4px;
             margin-left: 10px;
             vertical-align: middle;
         }
@@ -79,13 +130,16 @@
             vertical-align: middle;
         }
         strong{
-            color: #0073c0;
+            color: $blue8;
         }
 
         @include respond-to(md){
             @include span(.8);
-                margin: 0;
+                
                 text-align: right;
+                margin: 10px 0px;
+                letter-spacing: 2px;
+                @include fonts(400,13);
         }
     }
 
