--- a/wp-content/themes/I9ME/_src/scss/sections/_depoimentos.scss
+++ b/wp-content/themes/I9ME/_src/scss/sections/_depoimentos.scss
@@ -40,6 +40,9 @@
 				@include fonts(300, 16);
 			}
 		}
+		.owl-dots .owl-dot.active{
+			background-color: $blue2;
+		}
 		@include e('subtitulo'){
 			@include fonts(300, 16);
 			display: block;
