--- a/wp-content/themes/I9ME/_src/scss/sections/_header.scss
+++ b/wp-content/themes/I9ME/_src/scss/sections/_header.scss
@@ -108,7 +108,7 @@
         @include span(1);
         @include respond-to(md){
           width: auto;
-          padding: 0 20px;
+          padding: 0 34px 0 0;
            &:hover{
             background: transparent$i;
            }
